skins/oasis/css/core/_modal.scss
@import "../mixins/box-shadow";
@import "../mixins/clearfix";

.modalWrapper {
	@include box-shadow(0, 10px, 60px, mix($color-page, #000));
	background: $color-page;
	border: 5px solid $color-body;
	padding: 26px 18px 18px 18px;
	position: absolute;
	>h1 {
		color: $color-links;
		font-size: 22px;
		margin-bottom: 10px;
		margin-right: 30px;
		overflow: hidden;
	}
	.close {
		position: absolute;
		right: 18px;
		top: 18px;
	}
	.neutral {
		background: transparent;
	}
	.modalToolbar {
		text-align: right;
		background: transparent;
		margin-top: 1em;
		a {
			margin: 0 5px;
		}
	}
	.modal-tabs {
		border-bottom: 1px solid $color-page-border;
	}
}

.modalContent {
	@include clearfix;
	display: block;
}

.blackout {
	background: $color-page;
	left: 0;
	opacity: .8;
	position: absolute;
	top: 0;
	width: 100%;
}

// modify "YUI" extensions (VET / WMU)
yui-overlay, .yui-panel-container {
	position: absolute;
	z-index: $zTop + 2 !important;
}

.yui-panel {
	left: 0;
	position: relative;
	top: 0;
}

.mask {
	background: $color-page;
	margin-top: -30px;
	opacity: .8;
	position: fixed;
	z-index: $zTop + 1 !important;
}

.skin-oasis {

  #ImageUpload {
    background: $color-page;
  }

	#ImageUpload,
	#VideoEmbed {
		@include box-shadow(0, 10px, 60px, mix($color-page, #000));
		border: 5px solid $color-body;
		padding: 35px 5px 5px 5px !important;
		position: absolute;
		width: auto !important;
		h1 {
			color: $color-links;
			font-size: 22px;
		}
		.close {
			position: static;
			margin-top: 4px;
			vertical-align: baseline;
		}
	}
	#ImageUploadClose,
	#VideoEmbedClose {
		@include border-radius(3px);
		@include linear-gradient($color-buttons, top, $color-button-highlight, 8%, $color-buttons, 13%);
		height: 19px;
		padding: 0;
		right: 5px;
		text-align: center;
		width: 19px;
		a {
			display: none;
		}
	}
	#ImageUploadBorder,
	#VideoEmbedBorder {
		display: none;
	}
	#ImageUploadBody {
		height: 480px;
	}
	#ImageUploadProgress1,
	#VideoEmbedProgress1 {
		visibility: hidden;
	}
	.yui-back {
		display: inline-block;
		margin: 0 5px 0 0;
	}
	#VideoEmbedConflict .yui-back,
	#ImageUploadConflict .yui-back {
		bottom: 15px;
	}
}

